--- a/public/css/app.css
+++ b/public/css/app.css
@@ -750,6 +750,12 @@ body {
 .left-0{
   left: 0px;
 }
+.-left-32{
+  left: -8rem;
+}
+.top-10{
+  top: 2.5rem;
+}
 .top-1{
   top: 0.25rem;
 }
@@ -768,33 +774,6 @@ body {
 .right-4{
   right: 1rem;
 }
-.-left-0{
-  left: -0px;
-}
-.-left-2{
-  left: -0.5rem;
-}
-.-left-4{
-  left: -1rem;
-}
-.-left-10{
-  left: -2.5rem;
-}
-.-left-20{
-  left: -5rem;
-}
-.-left-48{
-  left: -12rem;
-}
-.-left-32{
-  left: -8rem;
-}
-.top-4{
-  top: 1rem;
-}
-.top-10{
-  top: 2.5rem;
-}
 .z-\[3\]{
   z-index: 3;
 }
@@ -809,6 +788,9 @@ body {
 }
 .col-span-12{
   grid-column: span 12 / span 12;
+}
+.col-span-2{
+  grid-column: span 2 / span 2;
 }
 .mx-auto{
   margin-left: auto;
@@ -825,6 +807,10 @@ body {
 .mx-4{
   margin-left: 1rem;
   margin-right: 1rem;
+}
+.my-8{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 .mt-4{
   margin-top: 1rem;
@@ -913,6 +899,12 @@ body {
 .h-5{
   height: 1.25rem;
 }
+.h-28{
+  height: 7rem;
+}
+.h-12{
+  height: 3rem;
+}
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
 }
@@ -943,17 +935,14 @@ body {
 .w-3{
   width: 0.75rem;
 }
-.w-64{
-  width: 16rem;
-}
-.w-2\/5{
-  width: 40%;
-}
-.w-56{
-  width: 14rem;
+.w-72{
+  width: 18rem;
 }
 .w-7{
   width: 1.75rem;
+}
+.w-64{
+  width: 16rem;
 }
 .w-14{
   width: 3.5rem;
@@ -967,17 +956,14 @@ body {
 .w-52{
   width: 13rem;
 }
-.w-72{
-  width: 18rem;
-}
 .w-5{
   width: 1.25rem;
 }
-.w-2\/3{
-  width: 66.666667%;
+.w-10{
+  width: 2.5rem;
 }
-.w-auto{
-  width: auto;
+.w-12{
+  width: 3rem;
 }
 .max-w-full{
   max-width: 100%;
@@ -1055,14 +1041,26 @@ body {
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+.grid-rows-2{
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+}
+.grid-rows-4{
+  grid-template-rows: repeat(4, minmax(0, 1fr));
+}
 .flex-col{
   flex-direction: column;
 }
-.flex-nowrap{
-  flex-wrap: nowrap;
+.items-start{
+  align-items: flex-start;
 }
 .items-center{
   align-items: center;
+}
+.justify-start{
+  justify-content: flex-start;
 }
 .justify-center{
   justify-content: center;
@@ -1070,14 +1068,14 @@ body {
 .justify-between{
   justify-content: space-between;
 }
+.gap-4{
+  gap: 1rem;
+}
 .gap-2{
   gap: 0.5rem;
 }
 .gap-10{
   gap: 2.5rem;
-}
-.gap-4{
-  gap: 1rem;
 }
 .gap-6{
   gap: 1.5rem;
@@ -1090,6 +1088,9 @@ body {
 }
 .gap-5{
   gap: 1.25rem;
+}
+.gap-0{
+  gap: 0px;
 }
 .divide-y > :not([hidden]) ~ :not([hidden]){
   --tw-divide-y-reverse: 0;
@@ -1119,9 +1120,6 @@ body {
 .whitespace-nowrap{
   white-space: nowrap;
 }
-.break-words{
-  overflow-wrap: break-word;
-}
 .rounded{
   border-radius: 0.25rem;
 }
@@ -1143,8 +1141,8 @@ body {
 .rounded-3xl{
   border-radius: 1.5rem;
 }
-.border-2{
-  border-width: 2px;
+.rounded-sm{
+  border-radius: 0.125rem;
 }
 .border{
   border-width: 1px;
@@ -1193,10 +1191,6 @@ body {
 .border-slate-800{
   --tw-border-opacity: 1;
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
-}
-.border-zinc-400{
-  --tw-border-opacity: 1;
-  border-color: rgb(161 161 170 / var(--tw-border-opacity));
 }
 .bg-white{
   --tw-bg-opacity: 1;
@@ -1257,9 +1251,9 @@ body {
 .bg-gray-900\/50{
   background-color: rgb(17 24 39 / 0.5);
 }
-.bg-black{
+.bg-gray-300{
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 .object-cover{
   -o-object-fit: cover;
@@ -1313,17 +1307,21 @@ body {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
-.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
 .py-10{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
 }
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+.py-7{
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
+}
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 .pb-2{
   padding-bottom: 0.5rem;
@@ -1364,26 +1362,20 @@ body {
 .pl-3{
   padding-left: 0.75rem;
 }
+.pr-52{
+  padding-right: 13rem;
+}
 .pr-5{
   padding-right: 1.25rem;
 }
-.pl-2{
-  padding-left: 0.5rem;
+.pt-40{
+  padding-top: 10rem;
 }
-.pl-10{
-  padding-left: 2.5rem;
+.pt-10{
+  padding-top: 2.5rem;
 }
-.pl-4{
-  padding-left: 1rem;
-}
-.pr-11{
-  padding-right: 2.75rem;
-}
-.pr-20{
-  padding-right: 5rem;
-}
-.pr-52{
-  padding-right: 13rem;
+.pb-8{
+  padding-bottom: 2rem;
 }
 .text-left{
   text-align: left;
@@ -1445,6 +1437,9 @@ body {
 .font-thin{
   font-weight: 100;
 }
+.font-extralight{
+  font-weight: 200;
+}
 .text-zinc-600{
   --tw-text-opacity: 1;
   color: rgb(82 82 91 / var(--tw-text-opacity));
@@ -1472,10 +1467,6 @@ body {
 .text-slate-500{
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
-}
-.text-rose-600{
-  --tw-text-opacity: 1;
-  color: rgb(225 29 72 / var(--tw-text-opacity));
 }
 .text-orange-500{
   --tw-text-opacity: 1;
@@ -1525,37 +1516,17 @@ body {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
-.text-cyan-600{
+.text-orange-400{
   --tw-text-opacity: 1;
-  color: rgb(8 145 178 / var(--tw-text-opacity));
+  color: rgb(251 146 60 / var(--tw-text-opacity));
 }
-.text-blue-500{
+.text-gray-600{
   --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
-.text-zinc-400{
+.text-gray-800{
   --tw-text-opacity: 1;
-  color: rgb(161 161 170 / var(--tw-text-opacity));
-}
-.text-blue-600{
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-.text-blue-300{
-  --tw-text-opacity: 1;
-  color: rgb(147 197 253 / var(--tw-text-opacity));
-}
-.text-sky-300{
-  --tw-text-opacity: 1;
-  color: rgb(125 211 252 / var(--tw-text-opacity));
-}
-.text-sky-400{
-  --tw-text-opacity: 1;
-  color: rgb(56 189 248 / var(--tw-text-opacity));
-}
-.text-sky-700{
-  --tw-text-opacity: 1;
-  color: rgb(3 105 161 / var(--tw-text-opacity));
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 .placeholder-zinc-400::-moz-placeholder{
   --tw-placeholder-opacity: 1;
