--- a/public/css/app.css
+++ b/public/css/app.css
@@ -786,15 +786,28 @@ body {
 .z-\[1\]{
   z-index: 1;
 }
-.col-span-12{
-  grid-column: span 12 / span 12;
+.order-1{
+  order: 1;
+}
+.order-2{
+  order: 2;
 }
 .col-span-2{
   grid-column: span 2 / span 2;
 }
+.col-span-12{
+  grid-column: span 12 / span 12;
+}
+.col-span-3{
+  grid-column: span 3 / span 3;
+}
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+.my-8{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 .mx-2{
   margin-left: 0.5rem;
@@ -807,10 +820,6 @@ body {
 .mx-4{
   margin-left: 1rem;
   margin-right: 1rem;
-}
-.my-8{
-  margin-top: 2rem;
-  margin-bottom: 2rem;
 }
 .mt-4{
   margin-top: 1rem;
@@ -866,11 +875,17 @@ body {
 .hidden{
   display: none;
 }
-.h-96{
-  height: 24rem;
+.h-12{
+  height: 3rem;
 }
 .h-full{
   height: 100%;
+}
+.h-9{
+  height: 2.25rem;
+}
+.h-96{
+  height: 24rem;
 }
 .h-3{
   height: 0.75rem;
@@ -899,11 +914,14 @@ body {
 .h-5{
   height: 1.25rem;
 }
-.h-28{
-  height: 7rem;
+.h-1\/3{
+  height: 33.333333%;
 }
-.h-12{
-  height: 3rem;
+.h-2\/3{
+  height: 66.666667%;
+}
+.h-3\/4{
+  height: 75%;
 }
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
@@ -914,11 +932,11 @@ body {
 .min-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   min-height: calc(100vh - 4rem);
 }
-.w-1\/2{
-  width: 50%;
-}
 .w-full{
   width: 100%;
+}
+.w-1\/2{
+  width: 50%;
 }
 .w-1\/3{
   width: 33.333333%;
@@ -959,11 +977,11 @@ body {
 .w-5{
   width: 1.25rem;
 }
-.w-10{
-  width: 2.5rem;
+.w-2\/3{
+  width: 66.666667%;
 }
-.w-12{
-  width: 3rem;
+.w-3\/4{
+  width: 75%;
 }
 .max-w-full{
   max-width: 100%;
@@ -1032,6 +1050,9 @@ body {
 .resize{
   resize: both;
 }
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -1041,14 +1062,14 @@ body {
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+.grid-cols-4{
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 .grid-rows-2{
   grid-template-rows: repeat(2, minmax(0, 1fr));
 }
-.grid-rows-4{
-  grid-template-rows: repeat(4, minmax(0, 1fr));
+.flex-row{
+  flex-direction: row;
 }
 .flex-col{
   flex-direction: column;
@@ -1058,9 +1079,6 @@ body {
 }
 .items-center{
   align-items: center;
-}
-.justify-start{
-  justify-content: flex-start;
 }
 .justify-center{
   justify-content: center;
@@ -1089,8 +1107,8 @@ body {
 .gap-5{
   gap: 1.25rem;
 }
-.gap-0{
-  gap: 0px;
+.gap-12{
+  gap: 3rem;
 }
 .divide-y > :not([hidden]) ~ :not([hidden]){
   --tw-divide-y-reverse: 0;
@@ -1120,6 +1138,9 @@ body {
 .whitespace-nowrap{
   white-space: nowrap;
 }
+.rounded-lg{
+  border-radius: 0.5rem;
+}
 .rounded{
   border-radius: 0.25rem;
 }
@@ -1135,17 +1156,18 @@ body {
 .rounded-md{
   border-radius: 0.375rem;
 }
-.rounded-lg{
-  border-radius: 0.5rem;
-}
 .rounded-3xl{
   border-radius: 1.5rem;
 }
-.rounded-sm{
-  border-radius: 0.125rem;
-}
 .border{
   border-width: 1px;
+}
+.border-y{
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+}
+.border-t{
+  border-top-width: 1px;
 }
 .border-t-2{
   border-top-width: 2px;
@@ -1158,9 +1180,6 @@ body {
 }
 .border-l-2{
   border-left-width: 2px;
-}
-.border-t{
-  border-top-width: 1px;
 }
 .border-solid{
   border-style: solid;
@@ -1196,6 +1215,10 @@ body {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-gray-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
 .bg-blue-600{
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
@@ -1203,10 +1226,6 @@ body {
 .bg-sky-500{
   --tw-bg-opacity: 1;
   background-color: rgb(14 165 233 / var(--tw-bg-opacity));
-}
-.bg-gray-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 .bg-gray-500{
   --tw-bg-opacity: 1;
@@ -1251,9 +1270,9 @@ body {
 .bg-gray-900\/50{
   background-color: rgb(17 24 39 / 0.5);
 }
-.bg-gray-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+.object-contain{
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .object-cover{
   -o-object-fit: cover;
@@ -1270,6 +1289,10 @@ body {
 }
 .p-0{
   padding: 0px;
+}
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 .py-2{
   padding-top: 0.5rem;
@@ -1315,12 +1338,16 @@ body {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
-.py-7{
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
+.pt-10{
+  padding-top: 2.5rem;
 }
-.py-8{
-  padding-top: 2rem;
+.pt-2{
+  padding-top: 0.5rem;
+}
+.pb-4{
+  padding-bottom: 1rem;
+}
+.pb-8{
   padding-bottom: 2rem;
 }
 .pb-2{
@@ -1329,14 +1356,8 @@ body {
 .pt-4{
   padding-top: 1rem;
 }
-.pt-2{
-  padding-top: 0.5rem;
-}
 .pt-28{
   padding-top: 7rem;
-}
-.pb-4{
-  padding-bottom: 1rem;
 }
 .pt-6{
   padding-top: 1.5rem;
@@ -1368,14 +1389,8 @@ body {
 .pr-5{
   padding-right: 1.25rem;
 }
-.pt-40{
-  padding-top: 10rem;
-}
-.pt-10{
-  padding-top: 2.5rem;
-}
-.pb-8{
-  padding-bottom: 2rem;
+.pt-8{
+  padding-top: 2rem;
 }
 .text-left{
   text-align: left;
@@ -1386,21 +1401,25 @@ body {
 .font-logo{
   font-family: Mochiy Pop P One, sans-serif;
 }
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 .text-base{
   font-size: 1rem;
   line-height: 1.5rem;
 }
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
 .text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 .text-5xl{
   font-size: 3rem;
@@ -1418,35 +1437,55 @@ body {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-8xl{
+  font-size: 6rem;
+  line-height: 1;
+}
+.text-6xl{
+  font-size: 3.75rem;
+  line-height: 1;
 }
 .font-medium{
   font-weight: 500;
 }
-.font-normal{
-  font-weight: 400;
+.font-semibold{
+  font-weight: 600;
 }
 .font-light{
   font-weight: 300;
 }
-.font-semibold{
-  font-weight: 600;
+.font-normal{
+  font-weight: 400;
 }
 .font-thin{
   font-weight: 100;
 }
-.font-extralight{
-  font-weight: 200;
+.font-bold{
+  font-weight: 700;
 }
-.text-zinc-600{
+.text-gray-600{
   --tw-text-opacity: 1;
-  color: rgb(82 82 91 / var(--tw-text-opacity));
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+.text-orange-500{
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
+}
+.text-gray-700{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+.text-gray-900{
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-zinc-600{
+  --tw-text-opacity: 1;
+  color: rgb(82 82 91 / var(--tw-text-opacity));
 }
 .text-sky-600{
   --tw-text-opacity: 1;
@@ -1468,10 +1507,6 @@ body {
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
 }
-.text-orange-500{
-  --tw-text-opacity: 1;
-  color: rgb(249 115 22 / var(--tw-text-opacity));
-}
 .text-zinc-700{
   --tw-text-opacity: 1;
   color: rgb(63 63 70 / var(--tw-text-opacity));
@@ -1492,17 +1527,9 @@ body {
   --tw-text-opacity: 1;
   color: rgb(22 101 52 / var(--tw-text-opacity));
 }
-.text-gray-900{
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
 .text-gray-500{
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-.text-gray-700{
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 .\!text-white{
   --tw-text-opacity: 1 !important;
@@ -1516,17 +1543,13 @@ body {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
-.text-orange-400{
+.text-zinc-800{
   --tw-text-opacity: 1;
-  color: rgb(251 146 60 / var(--tw-text-opacity));
+  color: rgb(39 39 42 / var(--tw-text-opacity));
 }
-.text-gray-600{
+.text-zinc-400{
   --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-.text-gray-800{
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
+  color: rgb(161 161 170 / var(--tw-text-opacity));
 }
 .placeholder-zinc-400::-moz-placeholder{
   --tw-placeholder-opacity: 1;
@@ -1692,6 +1715,11 @@ body {
 @media (min-width: 1024px){
 
 
+  .lg\:order-1{
+    order: 1;
+  }
+
+
   .lg\:col-span-3{
     grid-column: span 3 / span 3;
   }
@@ -1699,6 +1727,11 @@ body {
 
   .lg\:col-span-9{
     grid-column: span 9 / span 9;
+  }
+
+
+  .lg\:col-span-2{
+    grid-column: span 2 / span 2;
   }
 
 
@@ -1714,6 +1747,11 @@ body {
 
   .lg\:flex{
     display: flex;
+  }
+
+
+  .lg\:grid{
+    display: grid;
   }
 
 
@@ -1739,8 +1777,18 @@ body {
   }
 
 
+  .lg\:grid-rows-2{
+    grid-template-rows: repeat(2, minmax(0, 1fr));
+  }
+
+
   .lg\:flex-row{
     flex-direction: row;
+  }
+
+
+  .lg\:flex-col{
+    flex-direction: column;
   }
 
 
@@ -1761,6 +1809,11 @@ body {
 
   .lg\:gap-6{
     gap: 1.5rem;
+  }
+
+
+  .lg\:gap-2{
+    gap: 0.5rem;
   }
 
 
