--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -1045,6 +1045,10 @@ img {
   height: 10rem;
 }
 
+.h-6{
+  height: 1.5rem;
+}
+
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
 }
@@ -1286,6 +1290,10 @@ img {
 
 .gap-7{
   gap: 1.75rem;
+}
+
+.gap-1{
+  gap: 0.25rem;
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]){
