--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -985,6 +985,14 @@ img {
   margin-top: 0.25rem;
 }
 
+.mb-auto{
+  margin-bottom: auto;
+}
+
+.mt-auto{
+  margin-top: auto;
+}
+
 .block{
   display: block;
 }
@@ -1037,6 +1045,10 @@ img {
   height: 3.5rem;
 }
 
+.h-6{
+  height: 1.5rem;
+}
+
 .h-full{
   height: 100%;
 }
@@ -1045,8 +1057,12 @@ img {
   height: 10rem;
 }
 
-.h-6{
-  height: 1.5rem;
+.h-24{
+  height: 6rem;
+}
+
+.h-20{
+  height: 5rem;
 }
 
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
@@ -1288,12 +1304,12 @@ img {
   gap: 0.75rem;
 }
 
-.gap-7{
-  gap: 1.75rem;
-}
-
 .gap-1{
   gap: 0.25rem;
+}
+
+.gap-7{
+  gap: 1.75rem;
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]){
@@ -1665,6 +1681,11 @@ img {
   line-height: 1rem;
 }
 
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .font-semibold{
   font-weight: 600;
 }
@@ -1745,14 +1766,14 @@ img {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
-.text-sky-500{
-  --tw-text-opacity: 1;
-  color: rgb(14 165 233 / var(--tw-text-opacity));
-}
-
 .text-green-500{
   --tw-text-opacity: 1;
   color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+
+.text-sky-500{
+  --tw-text-opacity: 1;
+  color: rgb(14 165 233 / var(--tw-text-opacity));
 }
 
 .text-yellow-800{
@@ -2146,6 +2167,10 @@ img {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .md\:border-t-0{
     border-top-width: 0px;
   }
@@ -2179,6 +2204,10 @@ img {
 
   .lg\:w-80{
     width: 20rem;
+  }
+
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:p-7{
