--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -2215,6 +2215,11 @@ img {
   color: rgb(21 128 61 / var(--tw-text-opacity));
 }
 
+.text-red-900{
+  --tw-text-opacity: 1;
+  color: rgb(127 29 29 / var(--tw-text-opacity));
+}
+
 .underline{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
