--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -899,6 +899,10 @@ img {
   right: 0.5rem;
 }
 
+.top-9{
+  top: 2.25rem;
+}
+
 .z-10{
   z-index: 10;
 }
@@ -1154,6 +1158,18 @@ img {
   height: 1.5rem;
 }
 
+.h-12{
+  height: 3rem;
+}
+
+.h-48{
+  height: 12rem;
+}
+
+.h-52{
+  height: 13rem;
+}
+
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
 }
@@ -1168,6 +1184,10 @@ img {
 
 .max-h-40{
   max-height: 10rem;
+}
+
+.max-h-48{
+  max-height: 12rem;
 }
 
 .min-h-screen{
@@ -1260,6 +1280,10 @@ img {
 
 .w-24{
   width: 6rem;
+}
+
+.w-48{
+  width: 12rem;
 }
 
 .min-w-full{
@@ -2247,6 +2271,11 @@ img {
   color: rgb(21 128 61 / var(--tw-text-opacity));
 }
 
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .underline{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -2710,6 +2739,14 @@ img {
     width: 20rem;
   }
 
+  .lg\:basis-96{
+    flex-basis: 24rem;
+  }
+
+  .lg\:basis-28{
+    flex-basis: 7rem;
+  }
+
   .lg\:scale-90{
     --tw-scale-x: .9;
     --tw-scale-y: .9;
@@ -2732,12 +2769,20 @@ img {
     flex-direction: row;
   }
 
+  .lg\:flex-col{
+    flex-direction: column;
+  }
+
   .lg\:items-center{
     align-items: center;
   }
 
   .lg\:justify-start{
     justify-content: flex-start;
+  }
+
+  .lg\:justify-end{
+    justify-content: flex-end;
   }
 
   .lg\:justify-between{
@@ -2768,6 +2813,16 @@ img {
   .lg\:px-10{
     padding-left: 2.5rem;
     padding-right: 2.5rem;
+  }
+
+  .lg\:py-3{
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .lg\:py-8{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }
 
   .lg\:pt-0{
