--- a/public/css/app.css
+++ b/public/css/app.css
@@ -477,6 +477,7 @@ body {
 .top-2{ top: 0.5rem; }
 .left-3{ left: 0.75rem; }
 .right-2{ right: 0.5rem; }
+.top-9{ top: 2.25rem; }
 .z-10{ z-index: 10; }
 .z-30{ z-index: 30; }
 .z-40{ z-index: 40; }
@@ -539,10 +540,14 @@ body {
 .h-5{ height: 1.25rem; }
 .h-40{ height: 10rem; }
 .h-6{ height: 1.5rem; }
+.h-12{ height: 3rem; }
+.h-48{ height: 12rem; }
+.h-52{ height: 13rem; }
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{ max-height: calc(100vh - 4rem); }
 .max-h-96{ max-height: 24rem; }
 .max-h-56{ max-height: 14rem; }
 .max-h-40{ max-height: 10rem; }
+.max-h-48{ max-height: 12rem; }
 .min-h-screen{ min-height: 100vh; }
 .min-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{ min-height: calc(100vh - 4rem); }
 .min-h-full{ min-height: 100%; }
@@ -566,6 +571,7 @@ body {
 .w-40{ width: 10rem; }
 .w-12{ width: 3rem; }
 .w-24{ width: 6rem; }
+.w-48{ width: 12rem; }
 .min-w-full{ min-width: 100%; }
 .min-w-\[1000px\]{ min-width: 1000px; }
 .max-w-sm{ max-width: 24rem; }
@@ -789,6 +795,7 @@ body {
 .text-yellow-800{ --tw-text-opacity: 1; color: rgb(133 77 14 / var(--tw-text-opacity)); }
 .text-sky-700{ --tw-text-opacity: 1; color: rgb(3 105 161 / var(--tw-text-opacity)); }
 .text-green-700{ --tw-text-opacity: 1; color: rgb(21 128 61 / var(--tw-text-opacity)); }
+.text-black{ --tw-text-opacity: 1; color: rgb(0 0 0 / var(--tw-text-opacity)); }
 .underline{ -webkit-text-decoration-line: underline; text-decoration-line: underline; }
 .placeholder-zinc-400::-moz-placeholder{ --tw-placeholder-opacity: 1; color: rgb(161 161 170 / var(--tw-placeholder-opacity)); }
 .placeholder-zinc-400:-ms-input-placeholder{ --tw-placeholder-opacity: 1; color: rgb(161 161 170 / var(--tw-placeholder-opacity)); }
@@ -976,6 +983,10 @@ body {
 
  .lg\:w-80{ width: 20rem; }
 
+ .lg\:basis-96{ flex-basis: 24rem; }
+
+ .lg\:basis-28{ flex-basis: 7rem; }
+
  .lg\:scale-90{ --tw-scale-x: .9; --tw-scale-y: .9; transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)); }
 
  .lg\:grid-cols-2{ grid-template-columns: repeat(2, minmax(0, 1fr)); }
@@ -986,9 +997,13 @@ body {
 
  .lg\:flex-row{ flex-direction: row; }
 
+ .lg\:flex-col{ flex-direction: column; }
+
  .lg\:items-center{ align-items: center; }
 
  .lg\:justify-start{ justify-content: flex-start; }
+
+ .lg\:justify-end{ justify-content: flex-end; }
 
  .lg\:justify-between{ justify-content: space-between; }
 
@@ -1003,6 +1018,10 @@ body {
  .lg\:py-12{ padding-top: 3rem; padding-bottom: 3rem; }
 
  .lg\:px-10{ padding-left: 2.5rem; padding-right: 2.5rem; }
+
+ .lg\:py-3{ padding-top: 0.75rem; padding-bottom: 0.75rem; }
+
+ .lg\:py-8{ padding-top: 2rem; padding-bottom: 2rem; }
 
  .lg\:pt-0{ padding-top: 0px; }
 
