--- a/public/css/app.css
+++ b/public/css/app.css
@@ -516,6 +516,7 @@ body {
 .ml-2{ margin-left: 0.5rem; }
 .-mr-14{ margin-right: -3.5rem; }
 .mt-1{ margin-top: 0.25rem; }
+.mt-14{ margin-top: 3.5rem; }
 .block{ display: block; }
 .inline-block{ display: inline-block; }
 .flex{ display: flex; }
@@ -543,6 +544,8 @@ body {
 .h-12{ height: 3rem; }
 .h-48{ height: 12rem; }
 .h-52{ height: 13rem; }
+.h-60{ height: 15rem; }
+.h-36{ height: 9rem; }
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{ max-height: calc(100vh - 4rem); }
 .max-h-96{ max-height: 24rem; }
 .max-h-56{ max-height: 14rem; }
@@ -689,6 +692,7 @@ body {
 .bg-slate-100{ --tw-bg-opacity: 1; background-color: rgb(241 245 249 / var(--tw-bg-opacity)); }
 .bg-yellow-100{ --tw-bg-opacity: 1; background-color: rgb(254 249 195 / var(--tw-bg-opacity)); }
 .bg-sky-100{ --tw-bg-opacity: 1; background-color: rgb(224 242 254 / var(--tw-bg-opacity)); }
+.bg-red-500{ --tw-bg-opacity: 1; background-color: rgb(239 68 68 / var(--tw-bg-opacity)); }
 .object-contain{ -o-object-fit: contain; object-fit: contain; }
 .object-cover{ -o-object-fit: cover; object-fit: cover; }
 .p-4{ padding: 1rem; }
@@ -698,6 +702,7 @@ body {
 .p-0{ padding: 0px; }
 .p-2{ padding: 0.5rem; }
 .p-1{ padding: 0.25rem; }
+.p-6{ padding: 1.5rem; }
 .py-8{ padding-top: 2rem; padding-bottom: 2rem; }
 .py-4{ padding-top: 1rem; padding-bottom: 1rem; }
 .py-3{ padding-top: 0.75rem; padding-bottom: 0.75rem; }
