--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -1166,6 +1166,10 @@ img {
   height: 10rem;
 }
 
+.h-80{
+  height: 20rem;
+}
+
 .max-h-full{
   max-height: 100%;
 }
@@ -1406,6 +1410,10 @@ img {
   flex-wrap: wrap;
 }
 
+.flex-nowrap{
+  flex-wrap: nowrap;
+}
+
 .items-start{
   align-items: flex-start;
 }
@@ -1464,6 +1472,10 @@ img {
 
 .gap-7{
   gap: 1.75rem;
+}
+
+.gap-6{
+  gap: 1.5rem;
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]){
@@ -1694,6 +1706,10 @@ img {
   background-color: rgb(0 0 0 / 0.8);
 }
 
+.bg-black\/0{
+  background-color: rgb(0 0 0 / 0);
+}
+
 .bg-black\/70{
   background-color: rgb(0 0 0 / 0.7);
 }
@@ -1760,10 +1776,6 @@ img {
 .bg-slate-200{
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
-}
-
-.bg-black\/0{
-  background-color: rgb(0 0 0 / 0);
 }
 
 .object-contain{
