--- a/public/css/app.css
+++ b/public/css/app.css
@@ -542,6 +542,7 @@ body {
 .h-5{ height: 1.25rem; }
 .h-6{ height: 1.5rem; }
 .h-40{ height: 10rem; }
+.h-80{ height: 20rem; }
 .max-h-full{ max-height: 100%; }
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{ max-height: calc(100vh - 4rem); }
 .max-h-40{ max-height: 10rem; }
@@ -604,6 +605,7 @@ body {
 .grid-cols-12{ grid-template-columns: repeat(12, minmax(0, 1fr)); }
 .flex-col{ flex-direction: column; }
 .flex-wrap{ flex-wrap: wrap; }
+.flex-nowrap{ flex-wrap: nowrap; }
 .items-start{ align-items: flex-start; }
 .items-center{ align-items: center; }
 .justify-end{ justify-content: flex-end; }
@@ -619,6 +621,7 @@ body {
 .gap-8{ gap: 2rem; }
 .gap-1{ gap: 0.25rem; }
 .gap-7{ gap: 1.75rem; }
+.gap-6{ gap: 1.5rem; }
 .divide-y > :not([hidden]) ~ :not([hidden]){ --tw-divide-y-reverse: 0; border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse))); border-bottom-width: calc(1px * var(--tw-divide-y-reverse)); }
 .divide-zinc-700 > :not([hidden]) ~ :not([hidden]){ --tw-divide-opacity: 1; border-color: rgb(63 63 70 / var(--tw-divide-opacity)); }
 .divide-gray-100 > :not([hidden]) ~ :not([hidden]){ --tw-divide-opacity: 1; border-color: rgb(243 244 246 / var(--tw-divide-opacity)); }
@@ -669,6 +672,7 @@ body {
 .bg-sky-500{ --tw-bg-opacity: 1; background-color: rgb(14 165 233 / var(--tw-bg-opacity)); }
 .bg-orange-300{ --tw-bg-opacity: 1; background-color: rgb(253 186 116 / var(--tw-bg-opacity)); }
 .bg-black\/80{ background-color: rgb(0 0 0 / 0.8); }
+.bg-black\/0{ background-color: rgb(0 0 0 / 0); }
 .bg-black\/70{ background-color: rgb(0 0 0 / 0.7); }
 .bg-zinc-900{ --tw-bg-opacity: 1; background-color: rgb(24 24 27 / var(--tw-bg-opacity)); }
 .bg-zinc-800{ --tw-bg-opacity: 1; background-color: rgb(39 39 42 / var(--tw-bg-opacity)); }
@@ -683,7 +687,6 @@ body {
 .bg-sky-100{ --tw-bg-opacity: 1; background-color: rgb(224 242 254 / var(--tw-bg-opacity)); }
 .bg-sky-50{ --tw-bg-opacity: 1; background-color: rgb(240 249 255 / var(--tw-bg-opacity)); }
 .bg-slate-200{ --tw-bg-opacity: 1; background-color: rgb(226 232 240 / var(--tw-bg-opacity)); }
-.bg-black\/0{ background-color: rgb(0 0 0 / 0); }
 .object-contain{ -o-object-fit: contain; object-fit: contain; }
 .object-cover{ -o-object-fit: cover; object-fit: cover; }
 .p-4{ padding: 1rem; }
